deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: client-node-port
spec:
  type: NodePort
  ports:
    - port: 3050
      targetPort: 3000
      nodePort: 31515
  selector:
    component: frontend

---

apiVersion: apps/v1
kind: Deployment
metadata: 
  name: webapp-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: frontend
  template:
    metadata:
      labels:
        component: frontend
    spec:
      containers:
      - name: webapp
        image: adarshaug/simple-webapp
        ports:
          - containerPort: 3000
